--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<li><a href="" >Home</a></li>
 						<li><a href="" >About Us</a></li>
 						
-						<li id="logo"><a href="" >Adopt A Desi Student</a></li>
+						<li id="logo"><a href="" >Adopt A Student</a></li>
 						
 						<li><a href="" >Donate</a></li>
 						<li><a href="" >Contact Us</a></li>
