--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 		
 		<div id="hero">
 			<div class="container">
-				<img src="images/children_1.jpg" alt="Front of the donut shop " />
-				<p class="large_ribbon"> Fresh whole ingredients </p>
+				<img src="images/children_1.jpg" alt="Happy Children " />
+				<p class="large_ribbon"> Donate and make their life </p>
 				
 			</div> <!-- end container -->
 		</div> <!-- end hero -->
